# assay

./: .gitignore  README.md  pyproject.toml
adapters/report_engine/: adapter.py  golden.yaml  spec.py
assay/: __init__.py  cli.py  dataset.py  report.py  runner.py  systems.py  types.py
assay/scorers/: __init__.py  base.py  deterministic.py  judge.py
examples/: toy_spec.py  toy_spec_v2.py
examples/data/: sentiment.jsonl
tests/: test_core.py
