[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assay"
version = "0.1.0"
description = "A small, honest LLM-evaluation framework: golden datasets, deterministic + LLM-judge scorers, regression detection, CI gate."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
judge = ["anthropic>=0.40"]
dev = ["pytest>=8", "anthropic>=0.40"]

[project.scripts]
assay = "assay.cli:main"

[tool.setuptools.packages.find]
include = ["assay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
